# ChangeLog for games-simulation/billiards
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*billiards-0.4 (29 Apr 2011)

  29 Apr 2011; Michael Weber <xmw@gentoo.org> +billiards-0.3.ebuild,
  +billiards-0.4.ebuild, +metadata.xml:
  Version bump

*billiards-0.3 (29 Apr 2011)

  29 Apr 2011; Michael Weber <xmw@gentoo.org> +billiards-0.3.ebuild,
  +metadata.xml:
  Initial import (bug 269633)
