@@ -1,16 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST billiards-0.3.tar.gz 3079625 RMD160 9f3e70d669db91f5fc3bdcfcd515d1d9625d26f3 SHA1 2272c15401d9ec9b92e4260f06d7cbee78f4e878 SHA256 79d810954088efb3ff6534301333c578ae4d6c18ba19582580bccb17a68dad09
-DIST billiards-0.4.tar.gz 3085159 RMD160 6299bdb4b4ab602e9f69f23b2f8905cf1942f775 SHA1 e876ca46f84f2ec34b5706b8015593024c4a6b7d SHA256 718b8cf25aa2b41abc5df15a21ccd897c4f9cd5d8c83c9b6b8b50b8bfb1ea8e5
-EBUILD billiards-0.3.ebuild 736 RMD160 aba1be8b3ad3e595bed0f4fe8914410c54b1a5b0 SHA1 977c23aa00f46c30a2e9d7ea011bec98fd1565a4 SHA256 bf8a65f0423d9528ce94ac5f53bcf1125a11d0adf884f78c37368abd22455323
-EBUILD billiards-0.4.ebuild 591 RMD160 5fbf04f7fca813339703095abfbbff2bddcf6fb9 SHA1 624dd86e142df11d138deb46891db1b5611d945f SHA256 f4c912f49528775f15c12069f6b3976f0304e126e9e0c2b4a210102d0f4c32f3
-MISC ChangeLog 429 RMD160 0805ddaf36d24d9b8e4d713d4975c5d1d311a775 SHA1 895c623f9d5077929e421cda2e06df82fc07b70e SHA256 6d51352c925f7f80eaa33d51d89e592e34ec5a68b997c595e7664d1c5bb2bc52
-MISC metadata.xml 220 RMD160 c761dc748f2c8c4f23fc20f291c23c7fc55e15eb SHA1 4ac23bacdfaef3b1c9ad0fc98649c50fb4339a93 SHA256 2929e637a5b191025b80d7a5a1be68d315bcd38026272be5e845195a1f96745b
+DIST billiards-0.4.1.tar.gz 3086943 SHA256 6c9f3cb51247a29597cf9de9b42517495835d2abbe2e65d3cd91e5225da81cde SHA512 9f1716e192f299d73b0b8327bfaf9921957ff6642094f352ce450d42d8ee5742185a5d62d7c46757f1cb3e4a6b58992201bc4dc53ea6c9b7aa7d6bcbb6d348a6 WHIRLPOOL 198a7d8c55aacae85c3a415c379f015ec7283e679acc55fabef3a53bf0ae63d38b2cfaf62053ddc30f8b3e5f3856da4a5f3441e20ed12a7f3c2493c3fe5299c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk26JQsACgkQknrdDGLu8JD+XgD/Tt9PAODtiLQz7y9+nEaugie/
-MGPqhLCjBQq2/19m3VsA/jM/IM/EIgO8NlOjkaXAzwstQRkfTD38u2H4+Rbe9TPA
-=Y+V0
+iF4EAREIAAYFAlAJIQAACgkQknrdDGLu8JB6dQD/ZlpMgKkv6ruGrVGpGi0zCEC+
+iMR+imA3cOVpiYEJB1YA/3oC3z1GiIizVf1ehdhc4vKcBavh0aM0jNgjYBvHz+p3
+=nuWm
 -----END PGP SIGNATURE-----
