@@ -1,6 +1,12 @@
 # ChangeLog for games-simulation/billiards
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*billiards-0.4.1 (20 Jul 2012)
+
+  20 Jul 2012; Michael Weber <xmw@gentoo.org> +billiards-0.4.1.ebuild,
+  -billiards-0.3.ebuild, -billiards-0.4.ebuild:
+  games-simulation/billiards: Version bump, drop old
 
 *billiards-0.4 (29 Apr 2011)
 
@@ -13,4 +19,3 @@
   29 Apr 2011; Michael Weber <xmw@gentoo.org> +billiards-0.3.ebuild,
   +metadata.xml:
   Initial import (bug 269633)
-
